<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.nvtrong.myplace.activity.DetailActivity">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButtonDelete"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_remove"
                tools:ignore="ContentDescription,MissingConstraints" />

            <ImageButton
                android:id="@+id/imageButtonEdit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonDirection"
                app:layout_constraintStart_toEndOf="@+id/imageButtonDelete"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pencil"
                tools:ignore="ContentDescription,MissingConstraints" />

            <ImageButton
                android:id="@+id/imageButtonDirection"

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/editTextPlaceName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.466"
                app:srcCompat="@drawable/board"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/text_place_name"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/editTextPlaceName"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/editTextPlaceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/text_place_address"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/editTextPlaceAddress"
                app:layout_constraintTop_toBottomOf="@+id/editTextPlaceName" />

            <EditText
                android:id="@+id/editTextPlaceAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_place_description"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/editTextDescription"
                app:layout_constraintTop_toBottomOf="@+id/editTextPlaceAddress" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/container"
        android:onClick="onClick"
        android:text="Save" />
</RelativeLayout>
